# rust-3d

./: Cargo.toml
benches/: benchmarks.rs
src/: aa_bb_tree_2d.rs  aa_bb_tree_3d.rs  cluster.rs  convex_hull_2d.rs  douglas_peucker_2d.rs  dynamic_precision_index_vec.rs  filter_all_random_accessible.rs  filter_any_random_accessible.rs  half_edge.rs  heal_mesh.rs  interpolate_2d.rs  is_buildable_nd.rs  is_index_container.rs  is_mesh_3d.rs  is_searchable_mesh.rs  kd_tree.rs  line_segment_2d.rs  line_segment_3d.rs  matrix4.rs  mesh_3d.rs  oc_tree.rs  point_cloud_2d.rs  point_cloud_3d.rs  point_cloud_3d_f32.rs  polygon_2d.rs  polygon_3d.rs  searchable_mesh.rs  tri_face_3d.rs  u32_index_vec.rs  utils.rs
src/impls/: vec.rs
src/io/: byte_reader.rs  from_bytes.rs  obj.rs  off.rs  pts.rs  ptx.rs  stl.rs  types.rs  utils.rs  xy.rs  xyz.rs
src/io/gltf/: load.rs  types.rs
src/io/las/: load.rs
src/io/ply/: header.rs  iterators_internal.rs  types.rs
